// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActiveCaseList Case list while loading data 1`] = `
<button
  className="usa-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Loading...
</button>
`;

exports[`Storyshots ActiveCaseList Case list with modal 1`] = `
Array [
  <div
    className="ReactModal__Overlay ReactModal__Overlay--after-open"
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.75)",
        "bottom": 0,
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ReactModal__Content ReactModal__Content--after-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="dialog"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "background": "#fff",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "auto",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
        }
      }
      tabIndex="-1"
    >
      <h3>
        FAK1
        <img
          align="right"
          alt="close"
          onClick={[Function]}
          src="close.svg"
        />
      </h3>
      <form
        className="usa-form"
      >
        <label
          className="usa-label"
          htmlFor="snooze-reason"
        >
          Reason to snooze this case:
        </label>
        <select
          className="usa-select"
          defaultValue=""
          id="snooze-reason"
          name="snooze-reason"
          onChange={[Function]}
          required={true}
        >
          <option
            disabled={true}
            hidden={true}
            value={false}
          >
            - Select Reason -
          </option>
          <option
            value="test_data"
          >
            Test Data - should be deleted
          </option>
          <option
            value="assigned_case"
          >
            Case has been assigned - remind me later
          </option>
          <option
            value="in_proceedings"
          >
            Case is pending removal proceedings - check back later
          </option>
          <option
            value="fo_refferal"
          >
            Stuck at field office - awaiting response
          </option>
          <option
            value="technical_issue"
          >
            Technical Issue - awaiting resolution through ServiceNow
          </option>
          <option
            value="bcu"
          >
            Referral to BCU or CFDO
          </option>
        </select>
        <button
          className="usa-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Select a Reason
        </button>
      </form>
    </div>
  </div>,
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          Hello world
        </td>
        <td>
          ABC
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          Hello world2
        </td>
        <td>
          ABC2
        </td>
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Loading...
  </button>,
]
`;

exports[`Storyshots ActiveCaseList Case list with some data 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          Hello world
        </td>
        <td>
          ABC
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          Hello world2
        </td>
        <td>
          ABC2
        </td>
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots ActiveCaseList Empty case list 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td />
        <td />
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots ReceiptList Empty Receipt List 1`] = `
<p>
  No cases found.
</p>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td />
      <td />
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Snoozed Case List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Well done!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert dismissible 1`] = `
<div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a success alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a warning alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--info usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      This is some information.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Watch out for this!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;
